# fortran-subset-compiler

./: Cargo.toml  README.md  test.f03
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/language/: README.md  language.md
docs/src/lexing-parsing/: README.md
docs/src/mir/: README.md
docs/src/semantic-analysis/: README.md
src/: main.rs  session.rs
src/ast/: mod.rs
src/lex/: mod.rs
src/mir/: formal_temporary_table.rs  instructions.rs  mod.rs  walk.rs
src/parse/: mod.rs
src/span/: mod.rs
src/typeck/: hir.rs  mod.rs
src/types/: mod.rs
