[package]
name = "fortran-subset-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fcc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
codespan-reporting = "0.11.1"
indexmap = "1.9.3"
indexvec = "0.5.4"
logos = "0.13.0"
string-interner = "0.14.0"
strum = { version = "0.24.1", features = ["derive"] }
tracing = { version = "0.1.37", default-features = true, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "env-filter",
    "std",
] }
tracing-test = "0.2.4"

[dev-dependencies]
pretty_assertions = "1.3.0"
